# Nibbles-Game

./: README.md
src/: AllegroIncludes.h  CMakeLists.txt  Consts.h  FieldState.cpp  FieldState.h  Food.cpp  Food.h  Game.cpp  Game.h  GameObject.h  List.h  Node.h  Obstacle.cpp  Obstacle.h  Segment.cpp  Segment.h  Snake.cpp  Snake.h  main.cpp
